# ml_sudoku

./: .gitignore  README.md  pyproject.toml  test_bench.py
src/image_recognition/: board_reader.py  image_recognition.py  test
test/image_recognition/: test_board_reader.py
