[tool.poetry]
name = "ml_sudoku"
version = "0.1.0"
description = "ML Image Recongnition Layer for a Sudoku Solver"
authors = ["Bartosz Raubo <braubo@8thlight.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
